# DroidKaigiLocalLLMSample

./: .gitignore  .mcp.json  LICENSE  MODEL_SETUP.md  README.md  TEST_PROMPT.md  settings.gradle.kts  setup_llama_cpp.sh
.github/workflows/: android-ci.yml  android.yml
.serena/: project.yml
.serena/cache/kotlin/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
app/: build.gradle.kts
app/libs/: llama-release.aar
app/src/androidTest/java/com/daasuu/llmsample/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/daasuu/llmsample/data/preferences/: PreferencesManagerTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/lite_rt/gemma3/: README.md
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/daasuu/llmsample/: LLMSampleApplication.kt  MainActivity.kt
app/src/main/java/com/daasuu/llmsample/data/benchmark/: BenchmarkMode.kt  BenchmarkModels.kt  BenchmarkReportExporter.kt  BenchmarkRepository.kt  BenchmarkTestCases.kt  InterferenceMonitor.kt  PerformanceMonitor.kt
app/src/main/java/com/daasuu/llmsample/data/llm/gemini/: AICoreServiceHelper.kt  GeminiNanoCompatibilityChecker.kt  (+2 more)
app/src/main/java/com/daasuu/llmsample/data/model/: BenchmarkResult.kt  ChatMessage.kt  LLMProvider.kt  ModelInfo.kt
app/src/main/java/com/daasuu/llmsample/data/model_manager/: ModelDownloader.kt  ModelManager.kt
app/src/main/java/com/daasuu/llmsample/data/performance/: PerformanceLogger.kt  PerformanceModels.kt  PerformanceReportExporter.kt
app/src/main/java/com/daasuu/llmsample/data/preferences/: PreferencesManager.kt
app/src/main/java/com/daasuu/llmsample/data/prompts/: CommonPrompts.kt
app/src/main/java/com/daasuu/llmsample/data/settings/: SettingsRepository.kt  SettingsRepositoryImpl.kt
app/src/main/java/com/daasuu/llmsample/di/: BenchmarkEntryPoint.kt  LLMModule.kt  PerformanceEntryPoint.kt  SettingsModule.kt
app/src/main/java/com/daasuu/llmsample/domain/: LLMManager.kt  LLMRepository.kt
app/src/main/java/com/daasuu/llmsample/ui/components/: BenchmarkCharts.kt
app/src/main/java/com/daasuu/llmsample/ui/navigation/: AppNavigation.kt  BottomNavItem.kt
app/src/main/java/com/daasuu/llmsample/ui/screens/: MainScreen.kt
app/src/main/java/com/daasuu/llmsample/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/daasuu/llmsample/: ExampleUnitTest.kt  TestBase.kt
app/src/test/java/com/daasuu/llmsample/data/model_manager/: ModelManagerTest.kt
app/src/test/java/com/daasuu/llmsample/domain/: LLMManagerTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
